--- a/Lectures/ISLR_Ch9_Lab.ipynb
+++ b/Lectures/ISLR_Ch9_Lab.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "# %load ../standard_import.txt\n",
+    "#testing this\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
